# system-health-check

./: .gitignore  README.md  build_exe.bat  healthcheck-gui.spec  pyproject.toml  requirements.txt  run_gui.py  run_healthcheck.py
.github/workflows/: ci.yml
healthcheck/: __init__.py  config.py  config.yaml  cpu.py  dataclasses.py  disk.py  gui.py  i18n.py  main.py  memory.py  network.py  report.py  smart.py  temperature.py
tests/: test_config.py  test_dataclasses.py  test_main.py
